app/frontend/src/pages/chat/Chat.module.css
.container {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.chatRoot {
    flex: 1;
    display: flex;
}

.chatContainer {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    max-height: calc(100vh - 4rem);
}

.chatEmptyState {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-height: 64rem;
    padding: 2rem 1rem 1rem;
    gap: 0.25rem;
}

.chatEmptyStateLogo {
    width: auto;
    height: 4.5rem;
    margin-bottom: 1rem;
    object-fit: contain;
}

.chatEmptyStateSubtitle {
    font-weight: 400;
    margin-bottom: 1.5rem;
    color: hsl(var(--muted-foreground));
    font-size: 1.1rem;
}

.chatMessageStream {
    flex-grow: 1;
    width: 100%;
    max-width: 48rem;
    overflow-y: auto;
    padding: 1rem 1rem 0;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
}

.chatMessageGpt {
    margin-bottom: 0.5rem;
    max-width: 100%;
    display: flex;
}

.chatMessageGptMinWidth {
    max-width: 100%;
    margin-bottom: 0.5rem;
}

.chatInput {
    position: sticky;
    bottom: 0;
    flex: 0 0 auto;
    padding: 0.75rem 1rem 1.25rem;
    width: 100%;
    max-width: 48rem;
    background: hsl(var(--background));
}

.chatAnalysisPanel {
    flex: 1;
    overflow-y: auto;
    max-height: 85vh;
    margin-left: 1.25rem;
    margin-right: 1.25rem;
}

.chatSettingsSeparator {
    display: flex;
    flex-direction: column;
    margin-top: 0.9375rem;
}

.loadingLogo {
    font-size: 1.75rem;
}

.commandsSplitContainer {
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding-top: 0.5rem;
}

.commandsContainer {
    display: flex;
    padding-left: 1rem;
    padding-right: 1rem;
    align-self: flex-end;
}

.commandButton {
    margin-bottom: 0.5rem;
}

@media (min-width: 992px) {
    .chatEmptyState {
        padding-top: 4rem;
    }

    .chatEmptyStateLogo {
        height: 5.5rem;
    }

    .chatInput {
        padding: 0.5rem 0 1.5rem;
    }

    .commandsSplitContainer {
        padding-left: 0;
    }

    .commandsContainer {
        padding-left: 0;
        padding-right: 0;
    }

    .commandButton {
        margin-right: 0.75rem;
        margin-bottom: 0.5rem;
    }

    .chatMessageGpt {
        max-width: 100%;
    }
}

